@@ -29,7 +29,9 @@ version 1.1-rc0 ..-..-2012
         CCRepeatForever: has a stop method now (issue #945)
 . [FIX] ActionManager: always calls stop on a action that must be removed (issue #945)
 . [FIX] ColorLayer: color and opacity are readwrite (issue #1246)
-. [FIX] Director: exceptions raised in runloop didn't cause program to abort (issue #911)
+. [FIX] Director: 
+        exceptions raised in runloop didn't cause program to abort (issue #911)
+        Only enable depth test when a depth buffer is present
 . [FIX] Node: 
         onEnterTransitionDidFinish isn't called twice anymore, when node was added in onEnter
         touches still work when UIKit elements lay on top of cocos view 
